--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -10,8 +10,8 @@
           Save
         </button>
       </div>
-      <button class="iconbutton-neumorphism" matTooltip="Edit fields" matTooltipPosition="above" (click)="toggleEditFields()"
-        *ngIf="!tgleditField">
+      <button class="iconbutton-neumorphism" matTooltip="Edit fields" matTooltipPosition="above"
+        (click)="toggleEditFields()" *ngIf="!tgleditField">
         <i class="bi bi-pencil-square"></i>
       </button>
       <button class="iconbutton-neumorphism" matTooltip="Edit fields" matTooltipPosition="above"
@@ -42,8 +42,7 @@
           <ng-container *ngSwitchCase="'address'">
             <div class="col-md-12">
               <label for="{{ callDataIndex }}" class="lblFormComponent">{{ callData.element_placeholder }} *</label>
-              <textarea
-              pInputTextarea class="input-neumorphism txtFormComponent"
+              <textarea pInputTextarea class="input-neumorphism txtFormComponent"
                 (click)="!tgleditField ||toggleModifyAddressForm(callDataIndex, callData.element_placeholder)"
                 [ngClass]="{ 'input-disabled-neumorphism ': !tgleditField }" [readonly]="true"
                 placeholder="New {{ callData.element_placeholder }}" autocomplete="off"
@@ -91,8 +90,8 @@
               [readonly]="!tgleditField" type="text" placeholder="New apt" autocomplete="off" #apt
               formControlName="txtApt" />
           </mat-form-field>
-          
-          
+
+
         </div>
         <div class="col-md-4">
           <!-- <p-dropdown [options]="cities" class="input-neumorphism" optionLabel="name"
@@ -104,17 +103,17 @@
               formControlName="txtCity" />
           </mat-form-field>
 
-          
+
         </div>
       </div>
       <div class="form-row width-100">
         <div class="col-md-4">
-          
-          <p-dropdown [options]="states" class="input-neumorphism" optionLabel="name"
-            optionValue="state_code" placeholder="State" formControlName="slcState"></p-dropdown>
+
+          <p-dropdown [options]="states" class="input-neumorphism" optionLabel="name" optionValue="state_code"
+            placeholder="State" formControlName="slcState"></p-dropdown>
         </div>
         <div class="col-md-4">
-          
+
           <mat-form-field appearance="standard" class="txtFormComponent">
             <mat-label>Zip/Postal code</mat-label>
             <input matInput class="input-neumorphism" [ngClass]="{ 'input-disabled-neumorphism ': !tgleditField }"
@@ -123,10 +122,9 @@
           </mat-form-field>
         </div>
         <div class="col-md-4">
-          <p-dropdown [options]="countries" class="input-neumorphism"
-          (onChange)="getCountryInfo()" optionLabel="name" optionValue="Iso2" placeholder="Country"
-          formControlName="slcCountry"></p-dropdown>
-         
+          <p-dropdown [options]="countries" class="input-neumorphism" (onChange)="getCountryInfo()" optionLabel="name"
+            optionValue="Iso2" placeholder="Country" formControlName="slcCountry"></p-dropdown>
+
         </div>
       </div>
       <div class="form-row width-100">
@@ -146,125 +144,72 @@
 
 </p-dialog>
 
-<form
-      [formGroup]="addressForm"
-      *ngIf="addressForm"
-      novalidate
-      class="address-form"
-    >
-      <div class="form-row width-100">
-        <div class="col-md-4">
-          <mat-form-field appearance="standard" class="txtFormComponent">
-            <mat-label>Street</mat-label>
-            <input
-              matInput
-              class="input-neumorphism"
-              type="text"
-              placeholder="New Street"
-              autocomplete="off"
-              #street
-              formControlName="txtStreet"
-            />
-          </mat-form-field>
-        </div>
+<form [formGroup]="addressForm" *ngIf="addressForm" novalidate class="address-form">
+  <div class="form-row width-100">
+    <div class="col-md-4">
+      <mat-form-field appearance="standard" class="txtFormComponent">
+        <mat-label>Street</mat-label>
+        <input matInput class="input-neumorphism" type="text" placeholder="New Street" autocomplete="off" #street
+          formControlName="txtStreet" />
+      </mat-form-field>
+    </div>
 
-        <div class="col-md-4">
-          <mat-form-field appearance="standard" class="txtFormComponent">
-            <mat-label>Apt/Suite</mat-label>
-            <input
-              matInput
-              class="input-neumorphism"
-              type="text"
-              placeholder="New apt"
-              autocomplete="off"
-              #apt
-              formControlName="txtApt"
-            />
-          </mat-form-field>
-        </div>
-        <div class="col-md-4">
-          <!-- <p-dropdown [options]="cities" class="input-neumorphism" optionLabel="name"
+    <div class="col-md-4">
+      <mat-form-field appearance="standard" class="txtFormComponent">
+        <mat-label>Apt/Suite</mat-label>
+        <input matInput class="input-neumorphism" type="text" placeholder="New apt" autocomplete="off" #apt
+          formControlName="txtApt" />
+      </mat-form-field>
+    </div>
+    <div class="col-md-4">
+      <!-- <p-dropdown [options]="cities" class="input-neumorphism" optionLabel="name"
           optionValue="name" placeholder="City" formControlName="slcCity"></p-dropdown> -->
-          <mat-form-field appearance="standard" class="txtFormComponent">
-            <mat-label>City</mat-label>
-            <input
-              matInput
-              class="input-neumorphism"
-              type="text"
-              placeholder="New City"
-              autocomplete="off"
-              #city
-              formControlName="txtCity"
-            />
-          </mat-form-field>
-        </div>
-      </div>
-      <div class="form-row width-100">
-        <div class="col-md-4">
-          <p-dropdown
-            [options]="states"
-            class="input-neumorphism"
-            optionLabel="name"
-            optionValue="state_code"
-            placeholder="State"
-            formControlName="slcState"
-          ></p-dropdown>
-        </div>
-        <div class="col-md-4">
-          <mat-form-field appearance="standard" class="txtFormComponent">
-            <mat-label>Zip/Postal code</mat-label>
-            <input
-              matInput
-              class="input-neumorphism"
-              type="number"
-              placeholder="New zip code"
-              autocomplete="off"
-              #zip
-              formControlName="txtZip"
-            />
-          </mat-form-field>
-        </div>
-        <div class="col-md-4">
-          <p-dropdown
-            [options]="countries"
-            class="input-neumorphism"
-            (onChange)="getCountryInfo()"
-            optionLabel="name"
-            optionValue="Iso2"
-            placeholder="Country"
-            formControlName="slcCountry"
-          ></p-dropdown>
-        </div>
-      </div>
-      <div class="form-row width-100">
-        <div class="col-md-6">
-          <button
-            class="button-neumorphism"
-            (click)="tglModifyAddressForm = false"
-          >
-            Cancel
-          </button>
-        </div>
-        <div class="col-md-6">
-          <button
-            class="button-neumorphism"
-            [disabled]="!addressForm.valid"
-            [ngClass]="
+      <mat-form-field appearance="standard" class="txtFormComponent">
+        <mat-label>City</mat-label>
+        <input matInput class="input-neumorphism" type="text" placeholder="New City" autocomplete="off" #city
+          formControlName="txtCity" />
+      </mat-form-field>
+    </div>
+  </div>
+  <div class="form-row width-100">
+    <div class="col-md-4">
+      <p-dropdown [options]="states" class="input-neumorphism" optionLabel="name" optionValue="state_code"
+        placeholder="State" formControlName="slcState"></p-dropdown>
+    </div>
+    <div class="col-md-4">
+      <mat-form-field appearance="standard" class="txtFormComponent">
+        <mat-label>Zip/Postal code</mat-label>
+        <input matInput class="input-neumorphism" type="number" placeholder="New zip code" autocomplete="off" #zip
+          formControlName="txtZip" />
+      </mat-form-field>
+    </div>
+    <div class="col-md-4">
+      <p-dropdown [options]="countries" class="input-neumorphism" (onChange)="getCountryInfo()" optionLabel="name"
+        optionValue="Iso2" placeholder="Country" formControlName="slcCountry"></p-dropdown>
+    </div>
+  </div>
+  <div class="form-row width-100">
+    <div class="col-md-6">
+      <button class="button-neumorphism" (click)="tglModifyAddressForm = false">
+        Cancel
+      </button>
+    </div>
+    <div class="col-md-6">
+      <button class="button-neumorphism" [disabled]="!addressForm.valid" [ngClass]="
               !addressForm.valid
                 ? 'button-neumorphism-disabled'
                 : 'button-neumorphism'
-            "
-            (click)="
+            " (click)="
               saveAddressModified(
                 city.value,
                 street.value,
                 apt.value,
                 zip.value
               )
-            "
-          >
-            Save
-          </button>
-        </div>
-      </div>
-    </form>
+            ">
+        Save
+      </button>
+    </div>
+  </div>
+</form>
+<p-toast life="5000" position="top-center"></p-toast>
