--- a/src/app/css/neumorphism.component.css
+++ b/src/app/css/neumorphism.component.css
@@ -79,6 +79,7 @@
   width: 2.5rem;
   height: 2.5rem;
   border-radius: 2rem;
+  pointer-events: none;
   border: 0.0625rem solid #d1d9e6;
 }
 
@@ -400,9 +401,15 @@ input:checked + .toggle-slider-neumorphism::before {
 }
 
 .button-icon {
-  border-left: 0.0625rem solid #b8b9be;
+  border-left: 0.0625rem solid #b8b9be !important;
   padding-left: 0.55rem;
   margin-left: 0.22rem;
+}
+
+.icon-normal {
+  box-shadow: none !important;
+  background-color: #e6e7ee;
+  border: none !important;
 }
 
 ::ng-deep .p-toolbar {
@@ -753,7 +760,7 @@ input:checked + .toggle-slider-neumorphism::before {
   padding: 0.55rem;
   border-bottom-right-radius: 0.55rem;
   border-bottom-left-radius: 0.55rem;
-  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
 }
 
 ::ng-deep.p-progressbar .p-progressbar-value {
@@ -814,24 +821,31 @@ input:checked + .toggle-slider-neumorphism::before {
   box-shadow: none;
 }
 
-::ng-deep .p-multiselect-panel .p-multiselect-header .p-multiselect-close:focus {
+::ng-deep
+  .p-multiselect-panel
+  .p-multiselect-header
+  .p-multiselect-close:focus {
   box-shadow: none;
 }
 
-::ng-deep  .p-multiselect-panel .p-multiselect-header .p-multiselect-close:enabled {
+::ng-deep
+  .p-multiselect-panel
+  .p-multiselect-header
+  .p-multiselect-close:enabled {
   color: #44476a;
   background-color: #e6e7ee;
   border: 0.0625rem solid #d1d9e6;
   box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
-
 }
 
-::ng-deep  .p-multiselect-panel .p-multiselect-header .p-multiselect-close:enabled:hover {
+::ng-deep
+  .p-multiselect-panel
+  .p-multiselect-header
+  .p-multiselect-close:enabled:hover {
   color: #44476a;
   background-color: #e6e7ee;
   border: 0.0625rem solid #d1d9e6;
   box-shadow: 2px 2px 5px #b8b9be;
-
 }
 
 ::ng-deep.p-multiselect-panel {
@@ -880,21 +894,21 @@ input:checked + .toggle-slider-neumorphism::before {
   border-radius: 0.55em;
 }
 
-::ng-deep.p-inputswitch.p-inputswitch-checked:not(.p-disabled):hover .p-inputswitch-slider {
-  background-color: #e6e7ee;
-    box-shadow: inset 2px 2px 5px #b8b9be;
-    border: 0.0625rem solid #d1d9e6;
-
-}
-
-::ng-deep .p-inputswitch.p-inputswitch-checked .p-inputswitch-slider{
+::ng-deep.p-inputswitch.p-inputswitch-checked:not(.p-disabled):hover
+  .p-inputswitch-slider {
   background-color: #e6e7ee;
   box-shadow: inset 2px 2px 5px #b8b9be;
   border: 0.0625rem solid #d1d9e6;
-
 }
 
-::ng-deep.p-inputswitch.p-inputswitch-checked:not(.p-disabled):hover .p-inputswitch-slider{
+::ng-deep .p-inputswitch.p-inputswitch-checked .p-inputswitch-slider {
+  background-color: #e6e7ee;
+  box-shadow: inset 2px 2px 5px #b8b9be;
+  border: 0.0625rem solid #d1d9e6;
+}
+
+::ng-deep.p-inputswitch.p-inputswitch-checked:not(.p-disabled):hover
+  .p-inputswitch-slider {
   border: 0.0625rem solid #d1d9e6;
   animation: pulse 3s infinite;
   background-color: #e6e7ee;
@@ -903,7 +917,6 @@ input:checked + .toggle-slider-neumorphism::before {
 ::ng-deep.p-inputswitch .p-inputswitch-slider {
   border: 0.0625rem solid #d1d9e6;
   background-color: #e6e7ee;
-
 }
 
 ::ng-deep.p-inputswitch:not(.p-disabled):hover .p-inputswitch-slider {
@@ -911,7 +924,6 @@ input:checked + .toggle-slider-neumorphism::before {
   animation: pulse 3s infinite;
   background-color: #e6e7ee;
 }
-
 
 ::ng-deep.p-inputswitch .p-inputswitch-slider:before {
   background: #b1bcce;
@@ -921,14 +933,12 @@ input:checked + .toggle-slider-neumorphism::before {
   background: #44476a;
 }
 
-::ng-deep .p-inputswitch.p-focus .p-inputswitch-slider{
+::ng-deep .p-inputswitch.p-focus .p-inputswitch-slider {
   box-shadow: none;
-
 }
 
-::ng-deep .p-inputswitch.p-focus.p-inputswitch-checked .p-inputswitch-slider{
+::ng-deep .p-inputswitch.p-focus.p-inputswitch-checked .p-inputswitch-slider {
   box-shadow: inset 2px 2px 5px #b8b9be;
-
 }
 
 ::ng-deep .p-inputswitch {
@@ -937,12 +947,11 @@ input:checked + .toggle-slider-neumorphism::before {
 }
 
 ::ng-deep .p-inputswitch .p-inputswitch-slider:before {
-  left: .33rem;
+  left: 0.33rem;
 }
 
-::ng-deep .p-inputswitch-checked  .p-inputswitch-slider:before{
-  left: .99rem;
-
+::ng-deep .p-inputswitch-checked .p-inputswitch-slider:before {
+  left: 0.99rem;
 }
 
 ::ng-deep .mat-chip-list-wrapper {
@@ -975,4 +984,47 @@ input:checked + .toggle-slider-neumorphism::before {
   background-size: 4px 100%;
   background-repeat: repeat-x;
   background-color: transparent;
+}
+
+::ng-deep .p-toast .p-toast-message .p-toast-message-content span.pi {
+  padding-right: 0.6rem !important;
+  line-height: 3.6rem !important;
+}
+
+::ng-deep
+  .p-toast
+  .p-toast-message.p-toast-message-success
+  .p-toast-message-content
+  span.pi {
+  color: #296e58;
+}
+
+::ng-deep .p-toast .p-toast-message {
+  background-color: #e6e7ee;
+  color: #44476a;
+  border: solid #44476a;
+  box-shadow: 6px 6px 12px #b8b9be, -6px -6px 12px #fff;
+}
+
+::ng-deep .p-toast .p-toast-message.p-toast-message-success {
+  color: #296e58;
+  background-color: #e6e7ee;
+  border-left: 1rem solid #296e58;
+}
+
+::ng-deep .p-toast .p-toast-message.p-toast-message-error {
+  color: #a91e2c;
+  background-color: #e6e7ee;
+  border-left: 1rem solid #a91e2c;
+}
+::ng-deep
+  .p-toast
+  .p-toast-message.p-toast-message-error
+  .p-toast-message-content
+  span.pi {
+  color: #a91e2c;
+}
+
+textarea:focus-visible {
+  outline: none !important;
 }
