--- a/src/styles.css
+++ b/src/styles.css
@@ -5,87 +5,92 @@
 
 @import "../node_modules/primeng/resources/themes/nova/theme.css";
 
-html{ 
-  background-color: #e6e7ee; 
-  font-size: 0.90rem;
+html {
+  background-color: #e6e7ee;
+  font-size: 0.9rem;
   height: 100%;
   overflow-y: auto;
-} 
+}
 
-body{
+body {
   height: 100%;
-  background-color: #e6e7ee;   
+  background-color: #e6e7ee;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-.container-fluid { 
-  background-color: #e6e7ee;   
+.container-fluid {
+  background-color: #e6e7ee;
   height: 100%;
-} 
+}
 
 ::-webkit-scrollbar {
-  width: 0.3rem;
+  width: 0.5rem;
+  height: 0.5rem;
   border-radius: 2rem;
 }
-::-webkit-scrollbar:hover{
-  width: 1rem;
+::-webkit-scrollbar:hover {
+  width: 0.6rem;
+  height: 0.6rem;
 }
-  
+
 ::-webkit-scrollbar-track {
-  background: #cfcfd6; 
+  background: #cfcfd673;
   border-radius: 2rem;
 }
-   
+
+::-webkit-scrollbar-track:hover {
+  background: #cfcfd6;
+}
+
 ::-webkit-scrollbar-thumb {
-  background: #b8b9be; 
+  background: #b8b9be80;
   border-radius: 2rem;
 }
-  
+
 ::-webkit-scrollbar-thumb:hover {
-  background: #b8b9be; 
-  border-radius: 2rem;
+  background: #b8b9be;
 }
 
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
--webkit-appearance: none;
-margin: 0;
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
-.mat-select-panel{
+.mat-select-panel {
   background-color: #e6e7ee;
 }
 
-.mat-option-text{
-  color: #44476A;
+.mat-option-text {
+  color: #44476a;
 }
 
-.mat-option.mat-active{
+.mat-option.mat-active {
   background-color: rgba(38, 40, 51, 0.03) !important;
 }
 
 .mat-form-field.mat-focused .mat-form-field-ripple {
-  background-color: #44476A;
+  background-color: #44476a;
 }
 
 .mat-form-field.mat-focused .mat-form-field-label {
-  color: #44476A;
+  color: #44476a;
 }
 
 .mat-form-field.mat-focused.mat-primary .mat-select-arrow {
-  color: #44476A;
+  color: #44476a;
 }
 
-.mat-icon-button.mat-button-base{
+.mat-icon-button.mat-button-base {
   outline: none;
 }
 
 .mat-sort-header-arrow {
-  color: #44476A;
+  color: #44476a;
 }
 
 .mat-sort-header-container {
-  justify-content: center ;
+  justify-content: center;
 }
 
 @keyframes pulse {
@@ -94,7 +99,7 @@ margin: 0;
   }
 
   70% {
-    box-shadow: 0 0 0 .2rem rgba(0, 0, 0, 0);
+    box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0);
   }
 
   100% {
@@ -103,97 +108,101 @@ margin: 0;
 }
 
 @keyframes rotate {
-  from {transform: rotate(0deg);}
-  to {transform: rotate(360deg);}
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .mat-tooltip {
-  color: #44476A !important;
+  color: #44476a !important;
   font-weight: bold;
   background-color: #e6e7ee;
-  border: .0625rem solid #d1d9e6;
-  transition: all .2s ease-in-out;
+  border: 0.0625rem solid #d1d9e6;
+  transition: all 0.2s ease-in-out;
   box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
 }
 
-.show{
+.show {
   display: inline;
 }
 
-.hide{
+.hide {
   display: none;
 }
-.show-line{
+.show-line {
   display: inline-flex;
 }
-.show-line-b{
+.show-line-b {
   display: inline-block;
 }
 
-.hide-line{
+.hide-line {
   display: none;
 }
 
-.margin-right{
+.margin-right {
   margin-right: 1rem;
 }
 
-.margin-left{
+.margin-left {
   margin-left: 1rem;
 }
 
-.width-100{
+.width-100 {
   width: 100%;
 }
 
-.width-50{
+.width-50 {
   width: 50%;
 }
 
-.margin-bt{
+.margin-bt {
   margin-bottom: 1rem;
 }
 
-.margin-lg-bt{
+.margin-lg-bt {
   margin-bottom: 2rem;
 }
 
-.margin-lt{
+.margin-lt {
   margin-left: 1rem;
 }
 
-.margin-rt{
+.margin-rt {
   margin-right: 1rem;
 }
-.margin-tp{
+.margin-tp {
   margin-top: 1rem;
 }
-.float-rt{
+.float-rt {
   float: right;
 }
 
-.txt-lf{
+.txt-lf {
   text-align: left;
 }
 
-.txt-center{
+.txt-center {
   text-align: center;
 }
-.color-rd{
+.color-rd {
   color: #a91e2c;
 }
-.not-rounded{
+
+.not-rounded {
   border-radius: 0 !important;
 }
 
-.elm-rounded{
+.elm-rounded {
   border-radius: 1rem !important;
 }
-.not-bold{
+.not-bold {
   font-weight: normal !important;
 }
-.input-disabled-neumorphism{
+.input-disabled-neumorphism {
   outline: 0 !important;
   box-shadow: none !important;
 }
-
