--- a/src/app/components/table/table.component.css
+++ b/src/app/components/table/table.component.css
@@ -95,10 +95,6 @@
   transition: 1s;
 }
 
-::ng-deep.p-datatable .p-datatable-tbody > tr:last-child > td:first-child {
-  border-bottom-left-radius: 1rem;
-}
-
 ::ng-deep.p-datatable .p-datatable-tbody > tr:last-child > td:last-child {
   border-bottom-right-radius: 1rem;
 }
@@ -417,7 +413,7 @@ form {
 }
 
 ::ng-deep .p-button.p-button-outlined:enabled:hover {
-  background-color: rgba(38, 40, 51, 0.03);
+  background-color: #e6e7ee;
   color: #44476a !important;
   border: 0.0625rem solid;
 }
@@ -428,14 +424,7 @@ form {
   overflow-x: hidden;
   margin-bottom: 1rem;
 }
-/* ::ng-deep .p-datatable-table .p-datatable-tbody > tr > td {
-    width: fit-content !important;
-}
 
-::ng-deep .p-datatable-resizable .p-datatable-thead>tr>th{
-    width: fit-content !important;
-
-} */
 ::ng-deep .pi.pi-filter-icon.pi-filter {
   color: #b8bac7 !important;
 }
@@ -501,7 +490,8 @@ form {
   background-color: #e6e7ee !important;
   z-index: 1;
   left: 0 !important;
-  border-left: 8px solid transparent !important;
+  box-shadow: inset 5px 0 5px -4px #b8b9be;
+
 }
 
 .sticky-column {
@@ -510,12 +500,26 @@ form {
   z-index: 1;
   background-color: #e6e7ee !important;
   white-space: nowrap;
+  box-shadow: inset -4px 0px 0px -2px #d1d9e6;
+
 }
+
+.sticky-checkboxes-main{
+  top: 0 !important;
+  position: sticky;
+  z-index: 2;
+
+  box-shadow: inset 9px 9px 9px -9px #b8b9be, inset 0px -3px 0px -2px #d1d9e6, inset 0px 0px 0px -26px transparent !important;
+  border-top-left-radius: 1rem;
+}
+  
 
 .sticky-main {
   top: 0 !important;
   position: sticky;
   z-index: 2;
+  box-shadow: inset 0px 9px 9px -9px #b8b9be, inset -4px -3px 0px -2px #d1d9e6, inset 0px 0px 0px -26px transparent !important;
+
 }
 
 .stck-head {
@@ -523,21 +527,46 @@ form {
   position: sticky;
   z-index: 1;
   background-color: #e6e7ee !important;
+
 }
 
 ::ng-deep .p-datatable .p-datatable-thead > tr > th {
-  border-top: 8px solid transparent !important;
   padding: 1rem !important;
+  box-shadow: inset 0px 8px 8px -7px #b8b9be, inset 0px -3px 0px -2px #d1d9e6, inset 0px 0px 0px -26px transparent;
 }
 
 ::ng-deep .p-datatable .p-datatable-thead > tr > th:last-child {
-  border-right: 8px solid transparent !important;
+  box-shadow: inset 24px 33px 8px -32px #b8b9be, inset -54px 0px 15px -52px #fff, inset 0px -3px 0px -2px #d1d9e6 !important;
 }
 
-::ng-deep .p-datatable .p-datatable-tbody > tr:last-child > td {
-  border-bottom: 8px solid transparent !important;
-}
+::ng-deep .p-datatable .p-datatable-tbody > tr:last-child  {
+  box-shadow: inset -12px -12px 26px -22px #fff, inset 0px 0px 0px -2px transparent, inset 0px 0px 0px -26px transparent;
+  border-bottom-left-radius: 1rem;
+
+} 
+
+::ng-deep .p-datatable .p-datatable-tbody > tr:last-child >td:first-child {
+  box-shadow: inset 24px -17px 8px -24px #b8b9be, inset 0px -13px 9px -11px #fff, inset 0px 0px 0px -26px transparent;
+  border-bottom-left-radius: 1rem;
+} 
+
+::ng-deep .p-datatable .p-datatable-tbody > tr:last-child >td:nth-child(2){
+  box-shadow: inset 0px -26px 16px -24px #fff, inset -4px 0px 0px -2px #d1d9e6, inset 0px 0px 0px -26px transparent;
+} 
 
 ::ng-deep.p-button.p-button-text:enabled:hover {
   background: #e6e7ee !important;
+}
+
+::ng-deep.p-datatable-wrapper{
+  border-radius: 2rem !important;
+}
+
+::ng-deep .tglGroupMenu > p-dropdown > .p-dropdown{
+  border-bottom: none !important;
+}
+
+::ng-deep .address-add-record.p-float-label > label {
+  left: 1rem;
+  top: 1.2rem !important;
 }
