--- a/src/app/css/neumorphism.component.css
+++ b/src/app/css/neumorphism.component.css
@@ -138,10 +138,10 @@
 }
 
 .button-neumorphism-active {
-  color: #44476a;
-  background-color: #e6e7ee;
-  border: 0.0625rem solid #d1d9e6;
-  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+  color: #44476a  !important;
+  background-color: #e6e7ee  !important;
+  border: 0.0625rem solid #d1d9e6  !important;
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff !important;
 }
 
 .button-neumorphism-disabled {
@@ -372,7 +372,7 @@ input:checked + .toggle-slider-neumorphism::before {
   font-weight: normal;
   width: -webkit-fill-available;
   list-style-type: none;
-  z-index: 1;
+  z-index: 2;
   padding: 0;
   cursor: pointer;
 }
